--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/bullet.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
-  <script type="text/javascript" src="js/obstacle.js"></script>
+  <script type="text/javascript" src="js/obstacles.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
 
   <script type="text/javascript" src="js/index.js"></script>
@@ -17,6 +17,6 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <canvas id="canvas" width="1200" height="350"></canvas>
+  <canvas id="canvas" width="1200" height="380"></canvas>
 </body>
 </html>
