--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/bullet.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
+  <script type="text/javascript" src="js/points.js"></script>
   <script type="text/javascript" src="js/obstacles.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
 
