--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/obstacles.js"></script>
   <script type="text/javascript" src="js/points.js"></script>
+  <script type="text/javascript" src="js/tiefighter.js"></script>
 
   <script type="text/javascript" src="js/game.js"></script>
 
