--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
   <!-- JAVASCRIPT -->
   <script type="text/javascript" src="js/background.js"></script>
-  <script type="text/javascript" src="js/bullet.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/obstacles.js"></script>
   <script type="text/javascript" src="js/points.js"></script>
   <script type="text/javascript" src="js/tiefighter.js"></script>
+  <script type="text/javascript" src="js/gameover.js"></script>
 
   <script type="text/javascript" src="js/game.js"></script>
 
