--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- JAVASCRIPT -->
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
+  <script type="text/javascript" src="imagescore.js"></script>
   <script type="text/javascript" src="js/obstacles.js"></script>
   <script type="text/javascript" src="js/points.js"></script>
   <script type="text/javascript" src="js/tiefighter.js"></script>
@@ -20,6 +21,16 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <div class="container">
+  <img src="img/title.png" alt="Falcon Galaxy Game" />
   <canvas id="canvas" width="1200" height="380"></canvas>
+  </div>
+
+  <div class="buttons">
+      <button id="start-button"><img src="img/startbutton.png" alt="Start button"/></button>
+    <!-- <img src="img/startbutton.png" id="start-button" alt="Start button"/>
+ -->
+      <button id="pause-button"><img src="img/pausebutton.png" alt="Pause button"/></button>
+  </div>
 </body>
 </html>
