--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
   </div>
 
   <div class="buttons">
-      <button id="start-button"><img src="img/startbutton.png" alt="Start button"/></button>
-    <!-- <img src="img/startbutton.png" id="start-button" alt="Start button"/>
- -->
+     <img id="start-button" src="img/startbutton.png" alt="Start button"/>
   </div>
 </body>
 </html>
