--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="imagescore.js"></script>
   <script type="text/javascript" src="js/obstacles.js"></script>
+  <script type="text/javascript" src="js/bbpoints.js"></script>
   <script type="text/javascript" src="js/points.js"></script>
   <script type="text/javascript" src="js/tiefighter.js"></script>
   <script type="text/javascript" src="js/gameover.js"></script>
